# helita

./: .gitignore  .pre-commit-config.yaml  404.html  Jenkinsfile  LICENSE  README.md  ebysus.py  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: ci.yml
doc/: Makefile  conf.py  helita.ipynb  index.rst  make.bat
doc/_build/: .buildinfo  bq_t5.html  genindex.html  helita.html  index.html  objects.inv  search.html  searchindex.js
doc/_build/.doctrees/: FFTData_demo.doctree  bq_t5.doctree  helita.doctree  index.doctree
doc/_build/_sources/: bq_t5.rst.txt  helita.rst.txt  index.rst.txt
doc/_build/doctrees/: bq_t5.doctree  environment.pickle  helita.doctree  index.doctree
doc/_build/html/: bq_t5.html  helita.html  index.html  objects.inv  searchindex.js
doc/_build/html/.doctrees/: FFTData_demo.doctree  FFTData_demo_copy.doctree  bq_t5.doctree  environment.pickle  helita.doctree  helita_2.doctree  helita_2.nbconvert.doctree  index.doctree  introduction.doctree
doc/_build/html/_sources/: bq_t5.rst.txt  helita.ipynb.txt  helita.rst.txt  index.rst.txt
doc/source/: conf.py  index.txt  installation.txt
docs/: index.md  install.md  usage.md
helita/: __init__.py
helita/data/: BFI_filter_3883.txt  BFI_filter_3968.txt  BFI_filter_4305.txt  BFI_filter_4504.txt  BFI_filter_5550.txt  BFI_filter_6684.txt  VAL3C_source_functions.npz  multi3d_output.tar.bz2
helita/io/: __init__.py  anapyio.c  anapyio.pyx  crispex.py  fio.py  lp.py  ncdf.py  sdf.py
helita/io/src/: anacompress.c  anadecompress.c  libf0.c  types.h
helita/obs/: __init__.py  hinode.py  iris.py  iris_util.py
helita/sim/: .bifrost.py.swo  .bifrost.py.swp  __init__.py  atom_tools.py  atom_visualization.py  aux_compare.py  bifrost.py  bifrost_fft.py  bifrost_fft_TEST.py  bifrost_fft_TESTING.ipynb  bifrost_fft_simTest.py  bifrost_topology.py  bifrost_uvotrt.py  cipmocct.py  cstagger.c  cstagger.pyx  document_vars.py  ebysus.py  fake_ebysus_data.py  file_memory.py  fluid_tools.py  laresav.py  load_arithmetic_quantities.py  load_fromfile_quantities.py  load_mf_quantities.py  load_noeos_quantities.py  load_quantities.py  mah.py  manage_memmaps.py  matsumotosav.py  multi.py  multi3d.py  multi3dn.py  multispecies.py  muram.py  preft.py  pypluto.py  radyn.py  rh.py  rh15d.py  (+6 more)
helita/sim/docs/: bifrost.rst  conf.py  index.rst
helita/sim/docs/_build/doctrees/: environment.pickle  index.doctree
helita/sim/docs/_build/html/: .buildinfo  bifrost.html  bq_t5.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
helita/sim/docs/_build/html/.doctrees/: bifrost.doctree  bq_t5.doctree  environment.pickle  index.doctree
helita/sim/docs/_build/html/_sources/: bq_t5.rst.txt
helita/sim/multi3d/: m3d.py  m3d_classes.py  m3d_util.py  sample.py
helita/sim/multi3d/output/: chi_+0.00_+0.00_+1.00_allnu  ie_+0.00_+0.00_+1.00_allnu  isurf_allnu  multi3d.input  out_atm  out_nu  out_par  out_pop  out_rtq  snu_+0.00_+0.00_+1.00_allnu  tau500  zt1_+0.00_+0.00_+1.00_allnu
helita/sim/tests/: test_multi3d.py  test_rh15d.py
helita/utils/: __init__.py  bifrost_uvotrt.py  congrid.py  fitting.py  radtrans.c  radtrans.pyx  shell.py  trnslt.f90  utilsfast.c  utilsfast.pyx  utilsmath.py  voigtv.f  waveconv.py
helita/vis/: __init__.py  radiative_transfer.py  rh15d_vis.py
install/: index.html
search/: search_index.json
usage/: index.html
