[metadata]
name = helita
provides = helita
description = lar physics python tools from ITA/UiO
long_description = file: README.md
long_description_content_type = text/x-md
author = Tiago M. D. Pereira et al.
author_email = tiago.pereira@astro.uio.no
license = BSD 3-Clause
license_files = LICENSE
url = https://ita-solar.github.io/helita/
download_url = https://pypi.org/project/helita/
project_urls=
  Source Code = https://github.com/ITA-Solar/helita
  Documentation = https://ita-solar.github.io/helita/
  Issue Tracker = https://github.com/ITA-Solar/helita/issues
edit_on_github = True
github_project = ITA-Solar/helita
platform = any
keywords = astronomy, astrophysics, solar physics, sun, space, science
classifiers =
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Scientific/Engineering :: Physics
  Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
python_requires = >=3.8
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
  astropy
  matplotlib
  numpy
  pandas
  scipy
  sunpy
  tqdm
  xarray
  numba

[options.extras_require]
ebysus =
  zarr
tests =
  pytest-astropy

[tool:pytest]
testpaths = "helita"
norecursedirs = ".tox" "build" "docs" "*.egg-info" ".history"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
addopts = --doctest-rst --doctest-ignore-import-errors -p no:unraisableexception -p no:threadexception
markers =
    remote_data: marks this test function as needing remote data.
    online: marks this test function as needing online connectivity.
remote_data_strict = True
filterwarnings =
    error
    # Do not fail on pytest config issues (i.e. missing plugins) but do show them
    always::pytest.PytestConfigWarning
    # A list of warnings to ignore follows. If you add to this list, you MUST
    # add a comment or ideally a link to an issue that explains why the warning
    # is being ignored
    #

[pycodestyle]
max_line_length = 110

[flake8]
max-line-length = 110
exclude =
    .git,
    __pycache__,

[isort]
balanced_wrapping = True
default_section = THIRDPARTY
include_trailing_comma = True
known_first_party = helita
length_sort = False
length_sort_sections=stdlib
line_length = 110
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
